# HUGH-Sovereign-Guardian

./: .env.example  .gitignore  Dockerfile.proxmox  PRISM_AGENT_MURDOCK_v2.2 2.md  README.md  TRANSITION_AAR.md  TRANSITION_AAR_FINAL.md  claude_desktop_config.json  docker-compose.mcp.yml  manage_workshop_vm.py  proxmox_mcp.out  pyproject.toml  setup-mac.sh  start_server.sh
conductor/: hugh-agent-design.md  transition-implementation.md
convex-mcp/: Dockerfile
hostinger-ssh-mcp/: Dockerfile
hostinger-ssh-mcp/src/: server.py
hugh-agent/: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  cleanup-pve.sh  env.cog  env.lxc  env.pve  fungal_repair.sh  get_tunnel.js  keep_tunnel.js  lucius2.md  nginx_hugh.conf  package-lock.json  package.json  prime_directive.sh  run-handshake.sh
hugh-agent/bruce/: AEGIS_FORGE_BLUEPRINT.md  REPORT_BEAM_REASSESSMENT.md  REPORT_BEAM_TAKEOVER.md  REPORT_GEMMA4_ADOPTION.md  REPORT_POST_LUCIUS.md  REPORT_REASSESSMENT.md  REPORT_REASSESSMENT_R2.md  REPORT_RED_TEAM.md  attack_01.js  attack_02.js  attack_03.js  attack_04.js  attack_05.js  attack_06.js  attack_07.js  attack_08.js  attack_09.js  attack_10.js  attack_11.js  attack_12.js  attack_13.js  attack_14.js  attack_15.js  attack_16.js  attack_17.js  attack_18.js  attack_19.js  attack_20.js  attack_21.js  attack_22.js  attack_23.js  gemini.md  serve.cjs
hugh-agent/code-review-5pass/: kit.md
hugh-agent/codebase-map/: kit.md
hugh-agent/jason/: RED_TEAM_REPORT.md  agents.md
hugh-agent/journey-kit/: kit.md
hugh-agent/lucius/: CLAUDE.md  HELICARRIER.md  HELICARRIER_SPEC_V2.md  LUCIUS_ZERO_DEEPCODE_SPEC.md  SESSION_LOG.md  TASK_REGISTRY.md  app.yaml  codebase-map-install.json  context-guard-install.json  gemini.md  hugh-model-swap.sh  humanizer-install.json  journey-kit-install.json  knowledge-base-rag-install.json  lucius1.md  luciuslog1.md  query_memory.py  (+1 more)
hugh-agent/lucius/lalomorales__second-brain/src/: pyproject.toml
hugh-agent/lucius/lalomorales__second-brain/src/semantic_gravity_memory/: __init__.py  models.py
hugh-agent/lucius/lalomorales__second-brain/src/semantic_gravity_memory/core/: __init__.py  consolidation.py  crystal_forge.py  immune.py  metamemory.py  retrieval.py  self_state.py
hugh-agent/natasha/second-brain/src/: pyproject.toml
hugh-agent/natasha/second-brain/src/semantic_gravity_memory/: __init__.py
hugh-agent/natasha/second-brain/src/semantic_gravity_memory/api/: server.py
hugh-agent/natasha/second-brain/src/semantic_gravity_memory/core/: __init__.py
loom/: kuzu_utils.py  package-lock.json  package.json  requirements.txt
mapbox-mcp/: Dockerfile
proxmox-config/: claude_desktop_config.example.json  claude_desktop_config.json  config.json.backup
test_scripts/: create_windows_vm.py
tests/: test_server.py
(+474 files in other folders)
